--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
     testImplementation 'org.mockito:mockito-core:4.5.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
