--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,3 @@
+version=1.0.0
 repo.releases.url=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
 repo.snapshots.url=https://s01.oss.sonatype.org/content/repositories/snapshots/
