--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,8 +10,8 @@ permissions:
   contents: read
 
 jobs:
-  test_and_build:
-    name: 'Test and Build'
+  snapshot:
+    name: 'Publish Snapshot'
     runs-on: ubuntu-latest
 
     steps:
@@ -29,3 +29,10 @@ jobs:
         uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
         with:
           arguments: build
+      - name: Publish Snapshot
+        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        with:
+          arguments: -Psnapshot publish
+        env:
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
