--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,12 @@ java {
 }
 
 dependencies {
-    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    api 'com.squareup.okhttp3:okhttp:4.10.0'
+    api 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
+    api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
     testImplementation 'org.skyscreamer:jsonassert:1.5.0'
-    testImplementation 'org.mockito:mockito-core:4.5.1'
+    testImplementation 'org.mockito:mockito-core:4.6.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
@@ -40,7 +40,7 @@ test {
 
 publishing {
     publications {
-        mavenJava(MavenPublication) {
+        maven(MavenPublication) {
             from components.java
             pom {
                 scm {
@@ -62,6 +62,11 @@ publishing {
                     }
                 }
             }
+            versionMapping {
+                usage('java-api') {
+                    fromResolutionOf('runtimeClasspath')
+                }
+            }
         }
     }
     repositories {
@@ -80,5 +85,5 @@ signing {
     def signingKey = System.getenv("GPG_SIGNING_KEY")
     def signingPassword = System.getenv("GPG_SIGNING_PASSWORD")
     useInMemoryPgpKeys(keyId, signingKey, signingPassword)
-    sign publishing.publications.mavenJava
+    sign publishing.publications.maven
 }
