--- a/build.gradle
+++ b/build.gradle
@@ -81,9 +81,10 @@ publishing {
 }
 
 signing {
-    def keyId = System.getenv("GPG_KEY_ID")
+//    def keyId = System.getenv("GPG_KEY_ID")
     def signingKey = System.getenv("GPG_SIGNING_KEY")
     def signingPassword = System.getenv("GPG_SIGNING_PASSWORD")
-    useInMemoryPgpKeys(keyId, signingKey, signingPassword)
+//    useInMemoryPgpKeys(keyId, signingKey, signingPassword)
+    useInMemoryPgpKeys(signingKey, signingPassword)
     sign publishing.publications.maven
 }
