--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,18 +21,15 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
       - name: Test with Gradle
-        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-        with:
-          arguments: test
+        run: ./gradlew test
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-        with:
-          arguments: build
+        run: ./gradlew build
       - name: Publish Snapshot
-        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-        with:
-          arguments: -Psnapshot publish
+        run: |
+          ./gradlew -Psnapshot publish
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
