--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'java'
     id 'java-library'
     id 'io.freefair.lombok' version '6.5.0.2'
     id 'maven-publish'
@@ -15,6 +16,11 @@ repositories {
 java {
     withJavadocJar()
     withSourcesJar()
+}
+
+compileJava {
+    sourceCompatibility '1.8'
+    targetCompatibility '1.8'
 }
 
 dependencies {
