--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
     types: [created]
 jobs:
   snapshot:
-    name: 'Publish Snapshot'
+    name: 'Publish Release'
     runs-on: ubuntu-latest
 
     steps:
@@ -21,8 +21,9 @@ jobs:
         uses: actions/github-script@v4
         with:
           script: |
-            const version = context.ref.substring(1);
-            core.setOutput('version', version)
+            const noRef = context.ref.replace('refs/tag/', '')
+            const noPrefix = noRef.replace('v', '')
+            core.setOutput('version', noPrefix)
       - name: Publish Release
         run: |
           export GPG_SIGNING_KEY=$(echo -n "$GPG_SIGNING_KEY_BASE64" | base64 -d)
