--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,7 @@ jobs:
             const noRef = context.ref.replace('refs/tag/', '')
             const noPrefix = noRef.replace('v', '')
             core.setOutput('version', noPrefix)
+            console.log(noPrefix)
       - name: Publish Release
         run: |
           export GPG_SIGNING_KEY=$(echo -n "$GPG_SIGNING_KEY_BASE64" | base64 -d)
