--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'io.freefair.lombok' version '6.5.0.2'
     id 'maven-publish'
     id 'signing'
+    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
 }
 
 group 'app.knock.api'
@@ -11,6 +12,15 @@ version "${version}"
 
 repositories {
     mavenCentral()
+}
+
+nexusPublishing {
+    repositories {
+        sonatype {
+            nexusUrl.set(uri(project.property("repo.releases.url")))
+            snapshotRepositoryUrl.set(uri(project.property("repo.snapshots.url")))
+        }
+    }
 }
 
 java {
