ci: setting username and password to env vars

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ nexusPublishing {
         sonatype {
             nexusUrl.set(uri(project.property("repo.releases.url")))
             snapshotRepositoryUrl.set(uri(project.property("repo.snapshots.url")))
+            username = System.getenv("MAVEN_USERNAME")
+            password = System.getenv("MAVEN_PASSWORD")
         }
     }
 }
