--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Publish Release
         run: |
           export GPG_SIGNING_KEY=$(echo -n "$GPG_SIGNING_KEY_BASE64" | base64 -d)
-          ./gradlew publish -Pversion=${{steps.set_version.outputs.version}}
-          ./gradlew publishToSonatype closeAndReleaseSonatypeStagingRepository
+#          ./gradlew -Pversion=${{steps.set_version.outputs.version}} publishToSonatype closeAndReleaseSonatypeStagingRepository
+          ./gradlew -Pversion=${{steps.set_version.outputs.version}} publishToSonatype closeSonatypeStagingRepository
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
