--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 version=0.1.0-SNAPSHOT
-repo.releases.url=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
+repo.releases.url=https://s01.oss.sonatype.org/service/local/
 repo.snapshots.url=https://s01.oss.sonatype.org/content/repositories/snapshots/
